OSHB-158: Social dialogue: Alignment issues

--- a/static/custom/modules/vertical/osh-steering/social-dialogue/social-dialogue.scss
+++ b/static/custom/modules/vertical/osh-steering/social-dialogue/social-dialogue.scss
@@ -24,10 +24,11 @@
       margin: 0 2rem 3rem 0;
       .chart--block{
         padding:20px;
+        height: 100%;
         header{
           display: flex;
           margin-bottom: 0;
-          min-height: 36%;
+          min-height: 32%;
           img{
             width: auto;
             margin-right: 1rem;
